<resources>
    <string name="app_name">Remenber Me</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ecrypt_notes">Ecrypt Notes</string>
    <string name="ecrypt_image">Ecrypt Image</string>
    <string name="endeble_fakeImage">Endeble Fake Image</string>
    <string name="endeble_block">Endeble Block</string>
    <string name="is_erasable_note">Endeble Erasable Note</string>
    <string name="is_erasable_image">Endeble Erasable Image</string>
    <string name="user_management">User Management</string>
    <string name="show_all_notes">Show All Notes (Block and no Block)</string>
    <string name="menu_gallery">Menu Gallery</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_user_name">Reset User Name</string>
    <string name="reset_question">Reset Question</string>
    <string name="reset_answer">Reset Answer</string>
    <string name="reset_share_pass">Reset Share Password</string>
    <string name="add_fake_image">Add Fake Image</string>
    <string name="encript_this_image">Encript Image</string>
    <string name="add_url_backup">Add Backup Address</string>
    <string name="generate_backup">Generate Backup</string>
    <string name="get_backup">Restore Backup</string>




</resources>