<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azul1"
    tools:context=".fragments.SettingFragment" >


    <androidx.cardview.widget.CardView
        android:id="@+id/itemSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/user_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="TextView"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/ecrypt_notes" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/ecrypt_image"
            android:visibility="visible"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/endeble_fakeImage" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/endeble_block" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/is_erasable_image" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/is_erasable_note" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="48dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/show_all_notes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/reset_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="Reset setting to Default"
            android:clickable="true"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="18dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/user_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="@string/user_management"
            android:clickable="true"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="18dp"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>