<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azul1"
    tools:context=".fragments.user.UpdateUserDataFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_title_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/update_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="Update User data:"
                android:clickable="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_password_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/update_user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/reset_pass"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"

                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_name_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/update_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/reset_user_name"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_question_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/update_user_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/reset_question"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_answer_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            >

            <TextView
                android:id="@+id/update_user_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/reset_answer"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/update_user_share_pass_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/update_user_share_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/reset_share_pass"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"

                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/user_backup_url_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/user_backup_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/add_url_backup"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/generate_backup_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/generate_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/generate_backup"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"

                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/get_backup_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="408dp"
        android:backgroundTint="@color/azul1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/get_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/get_backup"
                android:clickable="true"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

